modifier mains.css

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,10 @@
    Author's custom styles
    ========================================================================== */
 
+body{
+    width :100%;
+    height:100%
+}
 
 
 
